cka/scenarios/broken.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broken
  namespace: qe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: broken
  template:
    metadata:
      labels:
        app: broken
    spec:
      containers:
      - name: app
        image: nginx:1.25-typoooo
        ports:
        - containerPort: 80
