cka/scenarios/mock7-q11-pending.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search
---
apiVersion: v1
kind: Pod
metadata:
  name: indexer
  namespace: search
spec:
  containers:
  - name: indexer
    image: nginx:1.27
    resources:
      requests:
        cpu: 100m
        memory: 12Gi
