cka/scenarios/mock7-q4-oom.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
  namespace: finops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-api
  template:
    metadata:
      labels:
        app: ledger-api
    spec:
      containers:
      - name: ledger
        image: polinux/stress
        command: ["stress"]
        args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
