cka/scenarios/sc-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sc-probe
  namespace: default
spec:
  containers:
    - name: probe
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      volumeMounts:
        - name: default-vol
          mountPath: /default
        - name: slow-vol
          mountPath: /slow
  volumes:
    - name: default-vol
      persistentVolumeClaim:
        claimName: sc-probe
    - name: slow-vol
      persistentVolumeClaim:
        claimName: slow-probe
