cka/scenarios/mock3-broken.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orbit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry
  namespace: orbit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: telemetry
  template:
    metadata:
      labels:
        app: telemetry
    spec:
      containers:
      - name: telemetry
        image: busybox:1.36
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: telemetry-svc
  namespace: orbit
spec:
  selector:
    app: telemtry
  ports:
  - port: 80
    targetPort: 80
