cka/scenarios/sts-h800.yaml
apiVersion: v1
kind: Service
metadata:
  name: o3db
  namespace: project-h800
spec:
  clusterIP: None
  selector:
    app: o3db
  ports:
  - port: 80
    name: web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: o3db
  namespace: project-h800
spec:
  serviceName: o3db
  replicas: 2
  selector:
    matchLabels:
      app: o3db
  template:
    metadata:
      labels:
        app: o3db
    spec:
      containers:
      - name: db
        image: nginx:1.27
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: data
          mountPath: /var/lib/data
      volumes:
      - name: data
        emptyDir: {}
